Configured maven wildfly plugin